Nested resources are working with Howto app , list and steps

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,6 +4,16 @@
   <strong>Name:</strong>
   <%= @list.name %>
 </p>
+<p>
+  <ul>
+  <% @list.steps.each do |step| %>
+    <li>
+      <p><%= link_to step.name, [@list, step]  %></p>
+      <p><%= step.description %></p>
+    </li>
+  <% end%>
+</ul>
+</p>
 
-<%= link_to 'Edit', edit_list_path(@list) %> |
+<%= link_to 'New Step', new_list_step_path(@list) %>
 <%= link_to 'Back', lists_path %>
