--- a/app/views/steps/edit.html.erb
+++ b/app/views/steps/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @step %> |
-<%= link_to 'Back', steps_path %>
+<%= link_to 'Show', list_step_path(@step.list,@step) %> |
+<%= link_to 'Back', list_steps_path(@step.list) %>
