--- a/app/views/steps/index.html.erb
+++ b/app/views/steps/index.html.erb
@@ -14,9 +14,9 @@
       <tr>
         <td><%= step.name %></td>
         <td><%= step.description %></td>
-        <td><%= link_to 'Show', step %></td>
-        <td><%= link_to 'Edit', edit_step_path(step) %></td>
-        <td><%= link_to 'Destroy', step, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to "show", list_step_path(step.list,step) %></td>
+        <td><%= link_to 'Edit', edit_list_step_path(step.list,step) %></td>
+        <td><%= link_to 'Destroy', [step.list,step], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Step', new_step_path %>
+<%= link_to 'New Step', new_list_step_path  %>
