--- a/app/views/steps/show.html.erb
+++ b/app/views/steps/show.html.erb
@@ -4,11 +4,9 @@
   <strong>Name:</strong>
   <%= @step.name %>
 </p>
-
 <p>
   <strong>Description:</strong>
   <%= @step.description %>
 </p>
 
-<%= link_to 'Edit', edit_step_path(@step) %> |
-<%= link_to 'Back', steps_path %>
+<%= link_to "edit", edit_list_step_path(@step.list,@step) %>
